# my-fastapi-project

./: .env  .gitignore  README.md  alembic.ini  main.py  pyproject.toml
alembic/: env.py
config/: data_base.py
models/: user_model.py
routes/: post_router.py  user_router.py
validation/: validations.py
