[project]
name = "data-processing"
version = "0.1.0"
description = ""
authors = [
    {name = "talha309",email = "tiseoexpert@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "uvicorn (>=0.34.0,<0.35.0)",
    "numpy (>=2.2.4,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "alembic (>=1.15.2,<2.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "dotenv (>=0.9.9,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
